# solana_ai_defi_aggregator

./: Anchor.toml  README.md  package-lock.json  package.json
frontend/: README.md  convert.js  eslint.config.mjs  package-lock.json  package.json
programs/solana_ai_defi_aggregator/: Cargo.toml
programs/solana_ai_defi_aggregator/src/: error.rs  lib.rs
programs/solana_ai_defi_aggregator/src/error/: jupiter_swap_error.rs  mod.rs  strategy_error.rs  vault_error.rs
programs/solana_ai_defi_aggregator/src/events/: mod.rs  swap_events.rs  vault_events.rs
programs/solana_ai_defi_aggregator/src/instructions/: execute_swap.rs  initialize_fee_vault.rs  initialize_global_state.rs  initialize_vault.rs  jupiter_swap.rs  mod.rs  register_user.rs  test_helper.rs
programs/solana_ai_defi_aggregator/src/instructions/marketplace/: buy_strategy.rs  create_strategy.rs  execute_marketplace_strategy.rs  mod.rs  record_execution_result.rs  update_strategy.rs
programs/solana_ai_defi_aggregator/src/instructions/vault/: deposit.rs  execute_strategy.rs  initialize_vault.rs  manage.rs  mod.rs  withdraw.rs
programs/solana_ai_defi_aggregator/src/state/: global_state.rs  mod.rs  strategy.rs  strategy_execution.rs  swap_context.rs  user_state.rs  user_strategy.rs  vault.rs
programs/solana_ai_defi_aggregator/src/utils/: fee.rs  mod.rs  profit.rs
scripts/: check-vault.ts  init-devnet.ts
strategy-engine/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
tests/: devnettest.ts  execute_strategy.ts  jupiter_swap.ts  solana_ai_defi_aggregator.ts  vault_test.ts
(+37 files in other folders)
